# EK

./: .gitignore  CMakeLists.txt  README.md  crud_database.c  crud_database.h  druck_einkauf.c  druck_einkauf.h  edit_data.c  edit_data.h  edit_list.c  edit_list.h  einkaufsliste.txt  main.c  preis_vergleich.c  preis_vergleich.h  startup_testfunktion.c  startup_testfunktion.h  userinput_pruefung.c  web_server.c  web_server.h
data/: datenbanken.csv  einkaufsliste.txt
include/: config.h  crud_database.h  csv_database_utils.h  database_controller.h  database_core_defs.h  preis_vergleich.h  quantity_unit_utils.h  text_input_utils.h  userinput_pruefung.h  web_server.h
include/database/: csv_database_utils.h  database_controller.h  quantity_unit_utils.h
include/webserver/: web_api.h  web_core.h  web_parser.h  web_router.h  web_static.h
include/webserver/api/: api_compare_handlers.h  api_db_handlers.h  api_list_handlers.h  api_utils.h
src/: config.c  crud_database.c  csv_database_utils.c  database_controller.c  edit_data.c  edit_list.c  main.c  preis_vergleich.c  quantity_unit_utils.c  text_input_utils.c  userinput_pruefung.c  web_server.c
src/database/: csv_database_utils.c  database_controller.c  quantity_unit_utils.c  text_input_utils.c
src/webserver/: web_api.c  web_core.c  web_parser.c  web_router.c  web_static.c
src/webserver/api/: api_compare_handlers.c  api_db_handlers.c  api_list_handlers.c  api_utils.c
web/: app.js  index.html  styles.css  ui.js
